<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/LinearLayout1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffd0dce5">

    <TextView android:text="@string/Main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff314659"
        android:textSize="40sp"
        android:paddingBottom="@dimen/activity_vertical_paading_margin"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button1_name"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffe1742a"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button2_name"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffe1742a"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button3_name"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffe1742a"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button4_name"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffe1742a"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button5_name"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffe1742a"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_button6_name"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/activity_button_width"
        android:background="#ffb70030"
        android:textColor="#ffffffff" />

</LinearLayout>
